8268349: Provide more detail in JEP 411 warning messages