@@ -44,14 +44,16 @@ import java.lang.reflect.Executable;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.net.URI;
+import java.net.URL;
 import java.nio.charset.CharacterCodingException;
-import java.security.AccessControlContext;
-import java.security.ProtectionDomain;
-import java.security.AccessController;
-import java.security.PrivilegedAction;
 import java.nio.channels.Channel;
 import java.nio.channels.spi.SelectorProvider;
 import java.nio.charset.Charset;
+import java.security.AccessControlContext;
+import java.security.AccessController;
+import java.security.CodeSource;
+import java.security.PrivilegedAction;
+import java.security.ProtectionDomain;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -59,6 +61,7 @@ import java.util.Properties;
 import java.util.PropertyPermission;
 import java.util.ResourceBundle;
 import java.util.Set;
+import java.util.WeakHashMap;
 import java.util.function.Supplier;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Stream;
@@ -324,6 +327,22 @@ public final class System {
     private static native void setOut0(PrintStream out);
     private static native void setErr0(PrintStream err);
 
+    // Remember original System.err. setSecurityManager() warning goes here
+    private static PrintStream oldErrStream = null;
+
+    private static class CallerHolder {
+        // Remember callers of setSecurityManager() here so that warning
+        // is only printed once for each different caller
+        final static Map<String, Boolean> callersOfSSM = new WeakHashMap<>();
+    }
+
+    private static URL codeSource(Class<?> clazz) {
+        PrivilegedAction<ProtectionDomain> pa = clazz::getProtectionDomain;
+        @SuppressWarnings("removal")
+        CodeSource cs = AccessController.doPrivileged(pa).getCodeSource();
+        return (cs != null) ? cs.getLocation() : null;
+    }
+
     /**
      * Sets the system-wide security manager.
      *
@@ -362,10 +381,20 @@ public final class System {
      *       method.
      */
     @Deprecated(since="17", forRemoval=true)
+    @CallerSensitive
     public static void setSecurityManager(@SuppressWarnings("removal") SecurityManager sm) {
         if (allowSecurityManager()) {
-            System.err.println("WARNING: java.lang.System::setSecurityManager" +
-                    " is deprecated and will be removed in a future release.");
+            var caller = Reflection.getCallerClass();
+            String signature = caller.getName() + " (" + codeSource(caller) + ")";
+            if (!CallerHolder.callersOfSSM.containsKey(signature)) {
+                oldErrStream.printf("""
+                        WARNING: A terminally deprecated method in java.lang.System has been called
+                        WARNING: java.lang.System::setSecurityManager has been called by %s
+                        WARNING: Please consider reporting this to the maintainers of %s
+                        WARNING: java.lang.System::setSecurityManager will be removed in a future release
+                        """, signature, caller.getName());
+                CallerHolder.callersOfSSM.put(signature, true);
+            }
             implSetSecurityManager(sm);
         } else {
             // security manager not allowed
@@ -2148,7 +2177,6 @@ public final class System {
         Unsafe.getUnsafe().ensureClassInitialized(StringConcatFactory.class);
 
         String smProp = System.getProperty("java.security.manager");
-        boolean needWarning = false;
         if (smProp != null) {
             switch (smProp) {
                 case "disallow":
@@ -2161,7 +2189,11 @@ public final class System {
                 case "default":
                     implSetSecurityManager(new SecurityManager());
                     allowSecurityManager = MAYBE;
-                    needWarning = true;
+                    System.err.printf("""
+                            WARNING: The Security Manager has been enabled on the command line (-Djava.security.manager%1$s)
+                            WARNING: The Security Manager is deprecated and will be removed in a future release
+                            WARNING: -Djava.security.manager%1$s will have no effect when the Security Manager is removed
+                            """, smProp.isEmpty() ? "" : ("=" + smProp));
                     break;
                 default:
                     try {
@@ -2180,7 +2212,11 @@ public final class System {
                         ctor.setAccessible(true);
                         SecurityManager sm = (SecurityManager) ctor.newInstance();
                         implSetSecurityManager(sm);
-                        needWarning = true;
+                        System.err.printf("""
+                                WARNING: A Security Manager implementation has been enabled on the command line
+                                WARNING: java.lang.SecurityManager is deprecated and will be removed in a future release
+                                WARNING: -Djava.security.manager=%s will have no effect when java.lang.SecurityManager is removed
+                                """, smProp);
                     } catch (Exception e) {
                         throw new InternalError("Could not create SecurityManager", e);
                     }
@@ -2190,10 +2226,7 @@ public final class System {
             allowSecurityManager = MAYBE;
         }
 
-        if (needWarning) {
-            System.err.println("WARNING: The Security Manager is deprecated" +
-                    " and will be removed in a future release.");
-        }
+        oldErrStream = System.err;
 
         // initializing the system class loader
         VM.initLevel(3);
